css/style.css
/* ... */
  .quantity__number-input::-webkit-inner-spin-button,
  .quantity__number-input::-webkit-outer-spin-button {   
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
  }

  .quantity__number-input {
    width: 2rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    text-align: center;
    border: none;
    border-top: 1px solid #e1e1e1;;
    border-bottom: 1px solid #e1e1e1;;
    -moz-appearance: none;
  }

  .q-view-popup__btn {
    margin-left: 2em;
    display: inline-block;
    padding: 1em 2.7em 0.8em 2.5em;
    font-size: 0.75rem;
    background-color: var(--green);
    color: #ffffff;
    border: none;
    transition: .3s ease;
    cursor: pointer;
  }
  .q-view-popup__btn:hover,
  .q-view-popup__btn:focus {
    color: #ffffff;
    background-color: #000000;
  }

  .q-view-popup__link {
    color: #888888;
    border-bottom: 1px dashed #e1e1e1;;
    margin-left: 0.5em;
  }

  .q-view-popup__link:hover,
  .q-view-popup__link:focus {
    color: #222222;
  }

  .q-view-popup__tags {
    margin-bottom: 1rem;
  }

  .q-view-popup__full-info-link {
    text-decoration: underline;
  }

  .q-view-popup__full-info-link:hover, 
  .q-view-popup__full-info-link:focus {
    opacity: 0.6;
  }

  .q-view-popup__slide img {
    margin-left: auto;
    margin-right: auto;
  }
  
/* 5. Custom styles */
  /* 5.0. Custom containters (Bootstrap 4) */
  .categories.container {
    max-width: 1170px;
  }

  main.container {
    max-width: 1200px;
    word-break: break-all;
  }

  /* 5.1. Active slide in category slider (Bootstrap slider) */
  .categories .carousel-item.active {
    display: flex;
  }

  /* 5.2. Slick slider */
  .categories .slick-track {
    display: flex;
  }

    /* It's absolute kludge for same width borders in categories*/
    .categories .draggable {
      border-left: 1px solid var(--main-gray);
      border-right: 1px solid var(--main-gray);
      margin-left: -1px;
      margin-right: -1px;
    }

  .categories .slick-arrow,
  .q-view-popup .slick-arrow {
    font-size: 0;
    border: none;
    padding: 0;
    background-color: transparent;
    position: absolute;
    top: 50%;
    width: 7%;
    height: 25%;
    z-index: 10;
    transform: translateY(-50%);
    outline: none;
  }
  
  .categories .slick-arrow::before,
  .q-view-popup .slick-arrow::before {
    transition: .3s ease;
  }

  .categories .slick-prev,
  .q-view-popup .slick-prev {
    left: 3%;
  }

  .categories .slick-next,
  .q-view-popup .slick-next {
    right: 3%;
  }

  .categories .slick-prev::before,
  .q-view-popup .slick-prev::before {
    content: "\e908";
    font-size: 2.8125rem;
  }

  .categories .slick-next::before,
  .q-view-popup .slick-next::before {
    content: "\e909";
    font-size: 2.8125rem;
  }

  .categories .slick-arrow:hover::before,
  .categories .slick-arrow:focus::before,
  .q-view-popup .slick-arrow:hover::before,
  .q-view-popup .slick-arrow:focus::before {
    color: var(--main-blue);
  }

  .q-view-popup .slick-dots {
    position: absolute;
    bottom: 0%;
    left: 50%;
    display: flex;
    justify-content: center;
    z-index: 1;
    margin: 0;
    padding: 0;
    font-size: 0;
  }

  .q-view-popup .slick-dots button {
    display: block;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    padding: 0;
    border: none;
    cursor: pointer;
    margin: 0 5px;
    background-color: var(--main-blue);
    transition: .3s ease;
    opacity: .5;
    outline: none;
  }

  .q-view-popup .slick-dots button:hover,
  .q-view-popup .slick-dots button:focus,
  .q-view-popup .slick-active button {
    transform: scale(1.3);
  }  

  .q-view-popup .slick-active button {
    transform: scale(1.3);
    opacity: 1;
  }

  /* 5.3. Tabs in product categories (reassignment Bootstrap 4 tabs properties) */
  .prod-categories .tab-content>.active {
    display: flex;
    flex-wrap: wrap;
  }

/* 6. Sections of page - index.html (styles of positioning elements in each specific section in the page) (firs nesting lvl. - section of page; second nesting lvl. - blocks in said section) */
  /* 6.1. Header */
    /* 6.1.1. Header-top */
    .header-top {
      border-bottom: 1px solid var(--main-gray);
    }
    
    .header-top__left {
      font-size: 0.75rem;
    }

    .header-top__number-line {
      font-size: 0.688rem;
      letter-spacing: 0.034rem;
    }
    
    .header-top__language-button,
    .header-top__currency-button {
      height: 20px;
      padding: 0;
      color: inherit;
      text-transform: uppercase;
      line-height: 1;
      background-color: transparent;
      border: none;
      border-right: 1px solid var(--main-gray);
    }

    .header-top__language-button::after,
    .header-top__currency-button::after {
      margin-right: 1rem;
      margin-left: 1rem;  
    }

    .header-top__left .dropdown-item {
      font-size: 0.75rem;
    }

    .dropdown-item.header-top__language-link::before,
    .header-top__language-button.header-top__language-link::before {
      content: '';
      background-image: url('../img/Udigital_flags.png');
      width: 20px;
      height: 20px;
      display: inline-block;
      margin-right: 5px;
      background-position-y: 50%;
      vertical-align: middle;
    }

    .lang-en::before {
      background-position-x: 4%;
    }

    .lang-fr::before {
      background-position-x: 27%;
    }

    .lang-ger::before {
      background-position-x: 51%;
    }

    .lang-it::before {
      background-position-x: 75%;
    }

    .lang-ua::before {
      background-position-x: 96.2%;
    }

    .header-top__navbar {
      font-size: 0.813rem;
      letter-spacing: 0.081rem;
    }

    .header-top__navbar .nav-link,
    .header-top__navbar .navbar-text {
      white-space: nowrap;
    }
/* ... */

